[tool.poetry]
name = "blender-maze"
version = "0.1.0"
description = ""
authors = ["Olivier Pons <olivier.pons@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.*"
bpy = "^4.1.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
